project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-server-svc
spec:
  type: ClusterIP
  selector:
    app: project-server # This is the app as declared in the deployment.
  ports:
    - port: 1234
      targetPort: 8090
      protocol: TCP
