project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dwk-project
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-client-svc
            port:
              number: 1233
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: project-server-svc
            port:
              number: 1234
